--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@sentry/nextjs": "^7.87.0",
     "classnames": "^2.3.2",
+    "next": "^14.0.4",
     "next-slicezone": "^0.2.6",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook-mobile": "^1.0.1",
