--- a/package.json
+++ b/package.json
@@ -30,7 +30,32 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook-mobile": "^1.0.1",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.3.3",
+    "@prismicio/react": "^2.7.1",
+    "@prismicio/slice-simulator-react": "^0.2.3",
+    "@slicemachine/adapter-next": "^0.3.6",
+    "@storybook/addon-docs": "^7.4.2",
+    "@storybook/addon-essentials": "^7.4.2",
+    "@storybook/addon-interactions": "^7.4.2",
+    "@storybook/addon-links": "^7.4.2",
+    "@storybook/blocks": "^7.4.2",
+    "@storybook/cli": "^7.4.2",
+    "@storybook/manager-api": "^7.4.2",
+    "@storybook/react": "^7.4.2",
+    "@storybook/react-vite": "^7.4.2",
+    "@storybook/testing-library": "^0.2.1",
+    "@storybook/theming": "^7.4.2",
+    "@types/styled-jsx": "^3.4.4",
+    "chromatic": "^6.19.9",
+    "prettier": "latest",
+    "prismic-reactjs": "^1.3.4",
+    "prop-types": "^15.8.1",
+    "slice-machine-ui": "^1.5.3",
+    "storybook": "^7.4.2",
+    "storybook-addon-designs": "7.0.0-beta.2",
+    "turbo": "latest"
   },
   "devDependencies": {
     "@prismicio/client": "^7.1.0",
