--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "slicemachine": "cd apps/storefront && pnpm slicemachine"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@apollo/react-hooks": "^4.0.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/material-icons": "^5.0.3",
     "@fontsource/roboto": "^5.0.3",
     "@mui/material": "^5.13.6",
     "@mui/styled-engine": "^5.13.2",
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.3.3",
+    "@prismicio/react": "^2.7.1",
+    "@prismicio/slice-simulator-react": "^0.2.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -23,18 +29,6 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@sentry/nextjs": "^7.87.0",
-    "classnames": "^2.3.2",
-    "next": "^14.0.4",
-    "next-slicezone": "^0.2.6",
-    "nprogress": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook-mobile": "^1.0.1",
-    "swiper": "^10.2.0",
-    "@prismicio/client": "^7.1.0",
-    "@prismicio/next": "^1.3.3",
-    "@prismicio/react": "^2.7.1",
-    "@prismicio/slice-simulator-react": "^0.2.3",
     "@slicemachine/adapter-next": "^0.3.6",
     "@storybook/addon-docs": "^7.4.2",
     "@storybook/addon-essentials": "^7.4.2",
@@ -48,13 +42,26 @@
     "@storybook/testing-library": "^0.2.1",
     "@storybook/theming": "^7.4.2",
     "@types/styled-jsx": "^3.4.4",
+    "algoliasearch": "^4.21.1",
     "chromatic": "^6.19.9",
+    "classnames": "^2.3.2",
+    "next": "^14.0.4",
+    "next-seo": "^6.4.0",
+    "next-slicezone": "^0.2.6",
+    "nprogress": "^0.2.0",
     "prettier": "latest",
     "prismic-reactjs": "^1.3.4",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-instantsearch-dom": "^6.40.4",
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive": "^9.0.2",
     "slice-machine-ui": "^1.5.3",
     "storybook": "^7.4.2",
     "storybook-addon-designs": "7.0.0-beta.2",
+    "storybook-mobile": "^1.0.1",
+    "swiper": "^10.2.0",
     "turbo": "latest"
   },
   "devDependencies": {
